unpackaged/main/default/objects/Account/fields/GearSet_Demo__c.field-meta.xml
<CustomField>
    <fullName>GearSet_Demo__c</fullName>
    <description>This is for demo gearset for now</description>
    <inlineHelpText>Nothing to add</inlineHelpText>
    <label>GearSet Demo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>