unpackaged/main/default/objects/Account/fields/NewPhoneField1__c.field-meta.xml
<CustomField>
    <fullName>NewPhoneField1__c</fullName>
    <description>New Phone Field 1</description>
    <label>NewPhoneField1</label>
    <type>Phone</type>
</CustomField>