unpackaged/main/default/objects/Account/fields/Test_Text_field2__c.field-meta.xml
<CustomField>
    <fullName>Test_Text_field2__c</fullName>
    <description>Gearset Demo Field</description>
    <label>Test Text field2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>