unpackaged/main/default/objects/Account/fields/Test_Text_field__c.field-meta.xml
<CustomField>
    <fullName>Test_Text_field__c</fullName>
    <description>This is a test text field used for Gearset demo. New description stuff</description>
    <label>Test Text field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>